--- a/vti-academy-web/login.html
+++ b/vti-academy-web/login.html
@@ -58,14 +58,14 @@
 										<input type="checkbox"> Remember Me
 									</label>
                                     <label class="pull-right">
-										<a href="#">Forgotten Password?</a>
+										<a href="#" onclick="resetPass()">Forgotten Password? </a>
 									</label>
 
                                 </div>
                                 <input type="button" value="Sign in" class="btn btn-primary btn-flat m-b-30 m-t-30" onclick="Login()">Sign in</input>
                                
                                 <div class="register-link m-t-15 text-center">
-                                    <p>Don't have account ? <a href="createAccount.html" onclick=""> Sign Up Here</a></p>
+                                    <p>Don't have account ? <a href="createAccount.html"> Sign Up Here</a></p>
                                 </div>
                             </form>
                         </div>
